tests/fixtures/fail/raw_allocator_reserved_name.sc
let raw_alloc(size: u64, align: u64): i32 = { 0 }

let main(): i32 = { 0 }
